re-aligned the text for dropdowns to make sure the pre label is more aligned with the dropdown text

--- a/packages/augur-ui/src/modules/common/selection.styles.less
+++ b/packages/augur-ui/src/modules/common/selection.styles.less
@@ -357,7 +357,6 @@
     }
 
     > button {
-
       // arrow
       > svg {
         > path {
@@ -369,6 +368,12 @@
 
   .Normal {
     align-items: center;
+
+    > span {
+      display: flex;
+      height: 100%;
+      border-bottom: @size-1 solid transparent;
+    }
 
     > button {
       .text-12;
@@ -450,7 +455,6 @@
         }
       }
     }
-
 
     > div {
       max-height: unset;
